fix logo distortion on zoom + remove bottom padding

--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -8,6 +8,8 @@ body {
 
 .logo img {
     all: revert;
+    width: 360px;
+    height: 62px;
 }
 
 ::placeholder {
